--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -107,5 +107,7 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "./dist"
   
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
